--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,12 +12,12 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [12.x]
+        node-version: [19]
 
     steps:
     - uses: actions/checkout@v3
     - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3.1.0
+      uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
     - name: npm install, build, and test
@@ -25,19 +25,19 @@ jobs:
         npm i
         npm test
     - name: Apply netrc creds with direct input
-      uses: little-core-labs/netrc-creds@master
+      uses: bcomnes/netrc-creds@master
       with:
         machine: some.other.api.com
         login: person
         password: 1234qwer
     - name: Apply netrc creds with direct input again
-      uses: little-core-labs/netrc-creds@master
+      uses: bcomnes/netrc-creds@master
       with:
         machine: another.api.com
         login: person
         password: 1234qwer
     - name: Apply netrc creds json block
-      uses: little-core-labs/netrc-creds@master
+      uses: bcomnes/netrc-creds@master
       with:
         creds: |
           [
@@ -60,7 +60,7 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
-      - uses: fastify/github-action-merge-dependabot@v2.7.1
+      - uses: fastify/github-action-merge-dependabot@v2
         if: ${{ github.actor == 'dependabot[bot]' && github.event_name == 'pull_request' }}
         with:
           github-token: ${{secrets.github_token}}
